--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,11 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-} 
+}
+
+.overlay {
+  transition-property: opacity, transform;
+}
 
 .step {
   display: flex;
