--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,18 @@
 @tailwind utilities;
 
 body {
+  height: 110vh;
+  display: grid;
+  place-content: center;
   background-color: #fff;
   color: #000;
+}
+
+.body-no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
 
 .overlay {
