--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   height: 110vh;
   display: grid;
   place-content: center;
@@ -10,36 +13,21 @@ body {
   color: #000;
 }
 
-.body-no-scroll {
+/* .body-no-scroll {
   overflow: hidden;
   position: fixed;
   width: 100%;
   height: 100%;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 10;
-  background: linear-gradient(#000d, #000a);
-  overflow-y: hidden;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.overlay {
-  transition-property: opacity, transform;
-}
+} */
 
 .step {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.overlay {
+  background: linear-gradient(#000d, #000a);
+  overflow-y: hidden;
 }
